changing bg color for improved legibility

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background: linear-gradient(to bottom right, #C6FFDD, #fbd786, #f7797d);
+    background: linear-gradient(to bottom right, #93ffbf, #fbd786, #f7797d);
     background-repeat: no-repeat;
     height: 100%;
     margin: 0;
